# bunnylol.rs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.toml.docker  docker-compose.yml  setup-ubuntu-server.sh
.cargo/: config.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
deploy/: DEPLOYMENT.md  auto-deploy.sh  setup-auto-deploy.sh  setup-ubuntu-server.sh
deployment/: DEPLOYMENT.md  bunnylol.service  deploy.sh
docs/: release.md
hooks/: README.md  install.sh  pre-commit
monitoring/: README.md  launch.sh  prometheus.yml
monitoring/grafana/dashboards/: bunnylol-dashboard.json
monitoring/grafana/provisioning/dashboards/: default.yml
scripts/: release.sh
src/: bunnylol_command_registry.rs  cli.rs  config.rs  history.rs  lib.rs  main.rs  routes.rs  service.rs  web.rs
src/.claude/: settings.local.json
src/commands/: amazon.rs  bindings.rs  brew.rs  bunnylol_command.rs  cargo.rs  chatgpt.rs  choco.rs  claude.rs  devbunny.rs  dockerhub.rs  duckduckgo.rs  facebook.rs  github.rs  gitlab.rs  gmail.rs  godocs.rs  google.rs  googlechat.rs  googledocs.rs  googlemaps.rs  googlesheets.rs  googleslides.rs  gopkg.rs  hack.rs  instagram.rs  linkedin.rs  mdn.rs  meta.rs  mod.rs  node.rs  npm.rs  nuget.rs  onepassword.rs  packagist.rs  protondrive.rs  protonmail.rs  pypi.rs  python.rs  reddit.rs  rei.rs  (+13 more)
src/config/: alias_migration.rs  mod.rs  user_bindings.rs
src/server/: metrics.rs  mod.rs  routes.rs  service.rs  stats.rs  web.rs
src/service_installer/: error.rs  installer.rs  manager.rs  mod.rs
src/systemd_installer/: error.rs  installer.rs  manager.rs  mod.rs  service_templates.rs
src/utils/: bunnylol_command.rs  mod.rs  url_encoding.rs
tests/: cli_integration.rs  server_e2e.rs  systemd_service_ci.sh
