[package]
name = "bunnylol"
version = "0.1.0"
authors = ["Joe Previte <jprevite@fb.com>", "Aaron Lichtman <alichtman@meta.com>"]
edition = "2024"
description = "Smart bookmark server and CLI: URL shortcuts for your browser's search bar and terminal"
license = "MIT"
repository = "https://github.com/facebook/bunnylol.rs"
readme = "README.md"
homepage = "https://github.com/facebook/bunnylol.rs"
keywords = ["browser", "bookmarks", "shortcuts", "url", "search"]
categories = ["command-line-utilities", "web-programming::http-server", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bunnylol"
path = "src/lib.rs"

[[bin]]
name = "bunnylol-server"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "bunnylol-cli"
path = "src/cli.rs"
required-features = ["cli"]

[dependencies]
# Shared dependencies
percent-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
xdg = "2.5"

# These are marked as optional so that we can optimize the size of each binary
# They are all needed for one or the other

# Web server dependencies
rocket = { version = "0.5", features = ["json"], optional = true }
tokio = { version = "1", features = ["macros"], optional = true }
leptos = { version = "0.6", features = ["ssr"], optional = true }
leptos_meta = { version = "0.6", features = ["ssr"], optional = true }

# CLI dependencies (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
open = { version = "5.0", optional = true }
tabled = { version = "0.16", optional = true }
whoami = { version = "1.5", optional = true }

[features]
default = ["server", "cli"]
server = ["rocket", "leptos", "leptos_meta", "tokio"]
cli = ["clap", "open", "tabled", "whoami"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
lto = true
strip = true
